--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Pedro Bianchini de Quadros # the main title
 tagline: I'm a computer scientist # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  My personal blog where I share insights on tech, projects, and personal growth.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
