--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ social:
 
 # Site Verification Settings
 webmaster_verifications:
-  google: google356c50363ccf82b8 # fill in your Google verification code
+  google: ccVCz7-ttyuYnMhcgu86K7iSW0qnBCe_nGznfn1GoAs # fill in your Google verification code
   bing: # fill in your Bing verification code
   alexa: # fill in your Alexa verification code
   yandex: # fill in your Yandex verification code
