--- a/admin/config.yml
+++ b/admin/config.yml
@@ -48,7 +48,7 @@ collections:
     label: "Artigos / Pesquisas"
     folder: "_articles"
     create: true
-    slug: "{{year}}-{{slug}}"
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     extension: "md"
     format: "frontmatter"
     fields:
@@ -68,7 +68,7 @@ collections:
     label: "Projetos"
     folder: "_projects"
     create: true
-    slug: "{{slug}}"
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     extension: "md"
     format: "frontmatter"
     fields:
